--- a/src/docs/asciidoc/AccuLondon.adoc
+++ b/src/docs/asciidoc/AccuLondon.adoc
@@ -66,7 +66,7 @@ image::asciidoc_in_2014_700x700.jpg["Asciidoc & Friends in 2014",600,600]
  | Packt   |  |---------|   |      |    Ant        +<--Tested Docs
  | Mallard |  | Chrome  |   |      |    SBT        |
  | Latex   |  | Firefox |   |      +---------------+
- +---------+  +----------+  +----->|    Grunt      |
+ +---------+  +---------+   +----->|    Grunt      |
                                    \---------------/
 ....
 
